# irecorder

./: CMakeLists.txt  README.md  audiocapture.cpp  audiocapture.h  config.h.in  irecorder.desktop  main.cpp
translations/: irecorder_zh_CN.qm  irecorder_zh_CN.ts
